# dwindows

./: Makefile.in  Version  Version.mk  acinclude.m4  aclocal.m4  ci.c  ci.def  compat.c  compat.h  config.h.in  configure  configure.ac  configure.in  dirent.h  dw-config.in  dw.def  dw.h  dw.hpp  dwcompat.c  dwcompat.def  dwcompat.h  dwcompate.def  dwcompatw-mingw.def  dwcompatw.def  dwconfig.h.in  dwindows-config.1  dwindows-config1.in  dwindows1.pc.in  dwtest.c  dwtest.def  dwtestoo.cpp  dww-mingw.def  dww.def  license.txt  makefile.emx  makefile.mingw  makefile.vac  makefile.vc  makefile.wpm  messagebox_error.xpm  (+8 more)
CVSROOT/: commitinfo  taginfo  writeinfo  writers
android/: AndroidManifest.xml  CMakeLists.txt  DWindows.kt  dw.cpp
debian/: changelog  control  copyright  rules
gtk/: browser.cpp  dw.c  file.xpm  folder.xpm  kill.xpm  maximize.xpm  messagebox_information.xpm  messagebox_warning.xpm  minimize.xpm  rel2abs.c
gtk3/: dw.c
gtk4/: dw.c
ios/: dw.m
lib/: dw.lib  dwcompat.lib  placehold
mac/: Info.plist  Info.template  browser.cpp  dw.c  dw.m  dwtest.r  finishup.sh
os2/: dirent.c  dw.c  dw.def  dw.lnk  dwcompat.def  dwcompat.lnk  dwtest.def  readme-os2.txt  svnrev.cmd
platform/: dirent.h
template/: dw.c
win/: XBrowseForFolder.cpp  XBrowseForFolder.h  __SVN__.REV  browser.c  dirent.c  dw-mingw.def  dw.c  dw.def  dw.dll.x64.manifest  dw.dll.x86.manifest  dw.rc  dwcompat-mingw.def  dwcompat.def  dwtest.exe.x64.manifest  dwtest.exe.x86.manifest  dwtest.rc  edge.cpp  readme-win.txt  wintoast.cpp
